--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,15 +21,27 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ env.PYTHON_SEMVER }}
-        cache: 'pip'
-
-    - name: Build application
-      run: pip install -r requirements.txt
+        cache: 'pipenv'
+    - name: Install pipenv
+      run: pip install pipenv
 
     - name: Download stock sample data
       run: |
         mkdir -p data 
         wget https://raw.githubusercontent.com/plotly/datasets/master/stockdata2.csv -P data
 
-    - name: Test with pytest
-      run: python -m pytest tests/test.py
+    - name: Run pytests
+      # Unable to use proper pytest invocation due to invalid test file names
+      # pytest only recognized test_*.py or *_test.py automatically
+      # run: |
+        # pipenv install --dev
+        # pipenv run pytest --junit-xml=test-results.xml 
+      run: |
+        pipenv install --dev
+        pipenv run python -m pytest tests/test.py --junit-xml=test-results.xml
+
+    - name: Failed test results
+      if: always()
+      uses: pmeier/pytest-results-action@main
+      with:
+        path: test-results.xml
